# DistributedFFT

./: README.md
3dmpifft_opt/: CMakeLists.txt  fftSpeed3d_c2c.cpp  nodelist  speedTest.sh
3dmpifft_opt/include/: fft_mpi_3d_api.cpp  fft_mpi_3d_api.h  fft_mpi_common.h  kernel_func.cpp  kernel_func.h
3dmpifft_opt/include/fast_transpose/: fast_transpose.h  kernels_012.cpp  kernels_021.cpp  kernels_102.cpp  kernels_120.cpp
3dmpifft_opt/kernel/: kernel_512x131072x1.h  kernel_512x512x1.h  kernel_512x65536x1.h
3dmpifft_roc/: CMakeLists.txt  fftSpeed3d_c2c.cpp  nodelist  speedTest.sh
3dmpifft_roc/include/: fft_mpi_3d_api.cpp  fft_mpi_3d_api.h  fft_mpi_common.h  kernel_func.cpp  kernel_func.h
3dmpifft_roc/include/fast_transpose/: kernels_201.cpp  kernels_210.cpp  transpose3d.cpp
heffte/heffte/include/: heffte_config.h
heffte/heffte/lib/: libheffte.so.2  libheffte.so.2.1.0
heffte/heffte/lib/cmake/Heffte/: HeffteConfig.cmake  HeffteConfigVersion.cmake  HeffteTargets-release.cmake  HeffteTargets.cmake
heffte/heffte/share/heffte/examples/: CMakeLists.txt
heffte/heffte/share/heffte/testing/: CMakeLists.txt
heffte/heffteBenchmark/: CMakeLists.txt  Makefile
heffte/heffteBenchmark/benchmarks/: CMakeCache.txt  CMakeLists.txt  Makefile  _Makefile  cmake_install.cmake  heffteSpeed.sh  nodelist  speed3d.h
templateFFT/batchTest/: Makefile  Test_1D.cpp  Test_2D.cpp  rocFFT_1d.cpp  rocFFT_2d.cpp  runTest1D_opt.sh  runTest1D_roc.sh  runTest2D_opt.sh  runTest2D_roc.sh
templateFFT/csv/: batch_result1D.csv  batch_result2D.csv  batch_rocResult1D.csv  batch_rocResult2D.csv
templateFFT/kernel/: kernel_1024x65536x1.h  kernel_512x131072x1.h
templateFFT/src/: FFT_matrix_2d.cpp  FFT_matrix_2d.h  FFT_matrix_2d_kernel.cpp  templateFFT.cpp  templateFFT.h
